--- a/docs/book-latex/book.tex
+++ b/docs/book-latex/book.tex
@@ -212,7 +212,7 @@
   \apptocmd{\@title}{\par {\large #1 \par}}{}{}
 }
 \makeatother
-\subtitle{Version 0.3.0}
+\subtitle{Version 0.3.1}
 \author{Duc-Tam Nguyen}
 \date{2025-10-02}
 \begin{document}
@@ -230,6 +230,24 @@
 \chapter{Content}\label{content}
 
 \emph{A 100-step journey to learn C from first principles}
+
+\begin{itemize}
+\tightlist
+\item
+  \href{https://github.com/little-book-of/c/blob/main/releases/book.pdf}{Download
+  PDF} - print-ready
+\item
+  \href{https://github.com/little-book-of/c/blob/main/releases/book.epub}{Download
+  EPUB} - e-reader friendly
+\item
+  \href{https://github.com/little-book-of/c/blob/main/releases/book.tex}{View
+  LaTex} - \texttt{.tex} source
+\item
+  \href{https://github.com/little-book-of/c/blob/main/books/en-US/book.md}{Source
+  code (Github)} - Markdown source
+\item
+  \href{https://little-book-of.github.io/c}{Read on GitHub Pages}
+\end{itemize}
 
 \subsection{Chapter 1. Getting Started with
 C}\label{chapter-1.-getting-started-with-c}
